# GVirtuS

./: CMakeLists.txt  Development Journal.md  Dockerfile  README.md  contributors.txt
cmake/: GVirtuS.cmake
demo/cudart/: add_grid.e  dummy0.e  launchKernel.e  matrixMul.e
etc/: properties.json
example/: frontend.sh
example/IMP_Test_CNN/: a.out  cnn.cu  cnn.py  example  extension.cu  frontend.sh  simple  test.cu  test.py
example/IMP_Test_CNN/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
example/IMP_Test_CNN/data/.ipynb_checkpoints/: Read MNIST Dataset-checkpoint.ipynb
example/cudnn_test/: cudnn_utils.h  cudnnconvolution_test.cu  cudnncreate_test.cu  cudnnlrn_test.cu  cudnnpooling_test.cu  cudnntensor_test.cu  frontend.sh
example/gvirtus-tests/: CMakeLists.txt  Dockerfile  cudnn_launcher  cudnn_utils.h  cudnn_utils_skip.h  frontend.sh  gvirtus-tests.yaml  launcher.cpp  test_cublas.cu  test_cudart.cu  test_cudnn.cu  test_cufft.cu  test_curand.cu
example/human_face/: Human face recognition.md  main.py  test_data.pt
example/yolov5-v6.1-opencv-onnxrun-main/opencv/: main.cpp  main.cu  run.sh  yolo_gpu
include/gvirtus/common/: LD_Lib.h
include/gvirtus/communicators/: Buffer.h  CommunicatorFactory.h  EndpointFactory.h  Endpoint_Rdma.h  Endpoint_Rdma_Roce.h  Endpoint_Tcp.h
lib/frontend/: libcublas.so.11.4  libcudart.so.11.4  libcudnn.so.9  libcudnn.so.9.7.1  libcufft.so.11.4  libcurand.so.11.4
lib/pkgconfig/: log4cplus.pc
plugins/cublas/backend/: CublasHandler.h  CublasHandler_Level2.cpp
plugins/cublas/frontend/: CublasFrontend.h
plugins/cudart/: CMakeLists.txt
plugins/cudart/backend/: CudaRtHandler.cpp  CudaRtHandler.h  CudaRtHandler_internal.cpp  CudaRtHandler_surface.cpp  CudaRtHandler_texture.cpp
plugins/cudart/demo/: CMakeLists.txt
plugins/cudart/frontend/: CudaRtFrontend.h  CudaRt_execution.cpp  CudaRt_internal.cpp  CudaRt_surface.cpp  CudaRt_texture.cpp
plugins/cudnn/: CMakeLists.txt
plugins/cudnn/backend/: CudnnHandler.cpp  HandleManager.h
plugins/cudnn/frontend/: Cudnn.cpp  CudnnFrontend.h  Cudnn_helper.cpp
src/backend/: Backend.cpp  Process.cpp  main.cpp
src/communicators/: Buffer.cpp  Endpoint_Rdma.cpp  Endpoint_Rdma_Roce.cpp  Endpoint_Tcp.cpp
src/communicators/rdma/: RdmaCommunicator.cpp  RdmaCommunicator.h  ktmrdma.cpp  ktmrdma.h
src/communicators/rdma_roce/: RdmaRoceCommunicator.cpp  RdmaRoceCommunicator.h  ktmrdma.cpp
src/communicators/tcp/: TcpCommunicator.cpp
